# local-agent

./: .gitignore  OPERATOR_QUICKREF.md  README.md  SECURITY.md  organon.md  pyproject.toml  requirements.txt
agent/: __main__.py  chunking.py  citation_audit.py  embed_runtime_fingerprint.py  embedder.py  embedding_fingerprint.py  embeddings_db.py  index_db.py  indexer.py  memory_db.py  phase3.py  protocol.py  retrieval.py  tools.py
agent/embedders/: __init__.py  ollama.py  torch_embedder.py
configs/: default.yaml
scripts/: clean_artifacts.py  make_release_zip.py
tests/: test_citation_audit.py  test_config_workspace_resolution.py  test_doctor.py  test_embed_runtime_fingerprint.py  test_embeddings_db.py  test_evidence_read_policy.py  test_ollama_embedder.py  test_phase2_chunking.py  test_phase2_indexing.py  test_phase2_query.py  test_phase3_ask_grounded.py  test_phase3_cli_contract.py  test_phase3_embed_doctor.py  test_phase3_fingerprint.py  test_phase3_retrieval.py  test_protocol_tool_call_parsing.py  test_root_resolution.py  test_scope_footer.py  test_tools_security.py  test_torch_embedder.py
